--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "cloudinary": "^2.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^4.0.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
     "next": "14.1.3",
@@ -17,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
   },
