--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "leaflet-geosearch": "^4.0.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
-    "next": "14.1.3",
+    "next": "^14.2.20",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-share": "^5.1.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
   },
