--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "mongoose": "^8.2.3",
     "next": "^14.2.20",
     "next-auth": "^4.24.7",
+    "photoswipe": "^5.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-photoswipe-gallery": "^3.0.2",
     "react-share": "^5.1.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
